<?xml version="1.0" encoding="utf-8"?>
<com.allattentionhere.fabulousfilter.AAH_FilterView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/filter_layout_height"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:visibility="invisible"
        tools:ignore="MissingPrefix"
        tools:visibility="visible">

        <TextView
            android:id="@+id/filter_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="@dimen/movie_detail_label"
            android:text="@string/filter_label"
            android:paddingBottom="@dimen/filter_label_vertical"
            android:paddingTop="@dimen/filter_label_vertical"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"/>

        <TextView
            android:layout_below="@id/filter_label"
            android:id="@+id/filter_popular"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/filter_chip_height"
            android:layout_marginTop="@dimen/filter_chip_margin_padding"
            android:layout_marginStart="@dimen/filter_chip_margin_padding"
            android:background="@drawable/chip_unselected"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingLeft="@dimen/filter_chip_margin_padding"
            android:paddingRight="@dimen/filter_chip_margin_padding"
            android:text="@string/filter_chip_popular"
            android:textSize="@dimen/chip_text_size" />

        <TextView
            android:id="@+id/filter_rating"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/filter_chip_height"
            android:layout_below="@id/filter_popular"
            android:layout_marginTop="@dimen/filter_chip_margin_padding"
            android:layout_marginStart="@dimen/filter_chip_margin_padding"
            android:background="@drawable/chip_unselected"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingLeft="@dimen/filter_chip_margin_padding"
            android:paddingRight="@dimen/filter_chip_margin_padding"
            android:text="@string/filter_chip_rated"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/chip_text_size" />

        <TextView
            android:id="@+id/filter_favorites"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/filter_chip_height"
            android:layout_below="@id/filter_rating"
            android:layout_marginTop="@dimen/filter_chip_margin_padding"
            android:layout_marginStart="@dimen/filter_chip_margin_padding"
            android:background="@drawable/chip_unselected"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingLeft="@dimen/filter_chip_margin_padding"
            android:paddingRight="@dimen/filter_chip_margin_padding"
            android:text="@string/filter_chip_favorites"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/chip_text_size" />

        <LinearLayout
            android:id="@+id/ll_buttons"
            android:layout_width="match_parent"
            android:layout_height="@dimen/filter_btn_height"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:weightSum="2"
            android:padding="@dimen/filter_btn_group_padding">

            <ImageButton
                android:id="@+id/check"
                android:layout_width="@dimen/filter_btn_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/filter_btn_horizontal"
                android:src="@drawable/ic_check_black_24dp"
                android:background="@drawable/filter_btn_bg"
                android:elevation="@dimen/filter_btn_elevation"/>

            <ImageButton
                android:id="@+id/btn_close"
                android:layout_width="@dimen/filter_btn_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_clear_black_24dp"
                android:background="@drawable/filter_btn_bg"
                android:elevation="@dimen/filter_btn_elevation"/>
        </LinearLayout>

    </RelativeLayout>

</com.allattentionhere.fabulousfilter.AAH_FilterView>